--- a/home.html
+++ b/home.html
@@ -99,6 +99,36 @@
             </div>
 
         </div>
+
+        <!-- New Section: Processes to Build Together -->
+        <div class="w-full mt-12 bg-gray-50 rounded-xl p-8 shadow-2xl">
+            <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center leading-tight mb-6">
+                Processes to Build Together
+            </h2>
+            <ul class="list-disc list-inside space-y-3 text-lg text-gray-700 md:text-xl">
+                <li class="flex items-start">
+                    <span class="text-google-blue mr-2 text-2xl">•</span>
+                    <div><strong class="font-semibold">Onboarding Flow:</strong> Assign steps, owners, and automation triggers across teams</div>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-google-green mr-2 text-2xl">•</span>
+                    <div><strong class="font-semibold">Churn Risk Dashboard:</strong> Real-time visibility across Product, Sales, and CS</div>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-google-yellow mr-2 text-2xl">•</span>
+                    <div><strong class="font-semibold">Voice of Customer Loop:</strong> Monthly synthesis → shared with Product and Exec</div>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-google-red mr-2 text-2xl">•</span>
+                    <div><strong class="font-semibold">Expansion Readiness Signals:</strong> Auto-flag healthy accounts to Sales + CS for upsells</div>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-purple-600 mr-2 text-2xl">•</span>
+                    <div><strong class="font-semibold">Ticket Categorization & Automation:</strong> Reduce support load, speed up time-to-resolution</div>
+                </li>
+            </ul>
+        </div>
+
     </div>
 </body>
 </html>
