--- a/home.html
+++ b/home.html
@@ -129,6 +129,70 @@
             </ul>
         </div>
 
+        <!-- New Section: CS Roadmap -->
+        <div class="w-full mt-12 bg-white rounded-xl p-8 shadow-2xl border-t-4 border-gray-300">
+            <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center leading-tight mb-8">
+                CS Roadmap
+            </h2>
+            <div class="flex flex-col md:flex-row justify-between items-stretch space-y-8 md:space-y-0 md:space-x-4">
+
+                <!-- 08/2025 -->
+                <div class="flex-1 bg-blue-50 rounded-lg p-5 border-l-4 border-google-blue shadow-md">
+                    <h3 class="text-xl font-bold text-google-blue mb-3">08/2025</h3>
+                    <ul class="list-disc list-inside text-gray-700 space-y-1 text-base">
+                        <li><strong>Onboarding and Assessment:</strong> Learn existing processes: Review current customer success workflows and tools</li>
+                        <li><strong>Cross-Team Collaboration:</strong> Meet with Product, Sales, and Development teams to understand the broader strategy.</li>
+                        <li><strong>Identify Strengths and Gaps:</strong> Determine what's working well and what needs improvement.</li>
+                    </ul>
+                </div>
+
+                <!-- 09/2025 -->
+                <div class="flex-1 bg-green-50 rounded-lg p-5 border-l-4 border-google-green shadow-md">
+                    <h3 class="text-xl font-bold text-google-green mb-3">09/2025</h3>
+                    <ul class="list-disc list-inside text-gray-700 space-y-1 text-base">
+                        <li><strong>Process Optimization and Quick Wins:</strong> Refine Workflows: Implement improvements in client onboarding and support processes.</li>
+                        <li><strong>Client Mapping:</strong> Develop personalized strategies for different client segments to ensure their unique needs are met. (CS Playbook Version 0.1)</li>
+                        <li><strong>Sales Feedback Loop:</strong> Ensure Sales provides key details about each client, like developer resources and design team involvement (etc).</li>
+                        <li><strong>Data Monitoring:</strong> Build a health scoring system using SDK integration status, transaction volume, user engagement and retention, support signals (Slack messages or tickets).</li>
+                    </ul>
+                </div>
+
+                <!-- 10/2025 -->
+                <div class="flex-1 bg-yellow-50 rounded-lg p-5 border-l-4 border-google-yellow shadow-md">
+                    <h3 class="text-xl font-bold text-google-yellow mb-3">10/2025</h3>
+                    <ul class="list-disc list-inside text-gray-700 space-y-1 text-base">
+                        <li><strong>Proactive Client Touchpoints:</strong> Schedule regular check-ins and business reviews with key clients to surface risks and upsell opportunities early (new titles).</li>
+                        <li><strong>CRM:</strong> Choose and implement tools for client management and success tracking.</li>
+                        <li><strong>Feedback Loop:</strong> Create a system for regular updates from clients and internal teams on new developments.</li>
+                        <li><strong>Internal Enablement:</strong> Train Sales and Product teams on customer insights gathered so far to refine pre-sale and post-sale alignment</li>
+                    </ul>
+                </div>
+
+                <!-- 11/2025 -->
+                <div class="flex-1 bg-red-50 rounded-lg p-5 border-l-4 border-google-red shadow-md">
+                    <h3 class="text-xl font-bold text-google-red mb-3">11/2025</h3>
+                    <ul class="list-disc list-inside text-gray-700 space-y-1 text-base">
+                        <li><strong>Proactive Engagement and Metrics:</strong> Client Success Metric: Set clear KPIs for customer health, onboarding speed, support responsiveness, and expansion potential</li>
+                        <li><strong>Upsell:</strong> Define clear signals for upsell and cross-sell moments.</li>
+                        <li><strong>CS Playbook Version 0.2:</strong> Update the client mapping and onboarding playbook based on learnings, adding edge-case handling and escalation paths.</li>
+                        <li><strong>Data Consolidation:</strong> Integrate client feedback into a central dashboard for visibility on trends and actionable items</li>
+                        <li><strong>Customer Advocacy Program:</strong> Identify satisfied customers and invite them for testimonials, case studies, or speaking opportunities</li>
+                    </ul>
+                </div>
+
+                <!-- 12/2025 -->
+                <div class="flex-1 bg-purple-50 rounded-lg p-5 border-l-4 border-purple-600 shadow-md">
+                    <h3 class="text-xl font-bold text-purple-600 mb-3">12/2025</h3>
+                    <ul class="list-disc list-inside text-gray-700 space-y-1 text-base">
+                        <li><strong>Scaling:</strong> Automation Opportunities: Identify repeatable manual tasks (follow-ups, status updates, onboarding steps) that can be automated or AI-ed to save time.</li>
+                        <li><strong>Team Growth Plan:</strong> Assess workload vs pipeline and draft a resource plan for when to hire additional CS resources</li>
+                        <li><strong>Proactive Risk Management:</strong> Build a simple system for flagging accounts at risk (low usage, support signals) and define clear intervention steps</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
